# nagamochi

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: build_and_release.yml  renovate.yml
src/: config.rs  lib.rs  main.rs  serde_helper.rs  suppressor.rs  trigger.rs
src/tests/configs/: bad_config.yml  general_config.yml  mapped_config.yml
