[package]
name = "nagamochi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
notify-rust = "4.5"
pretty_assertions = "1.0"
seahorse = "1.1"
serde = "1.0"
serde_yaml = "0.8"
soloud = "1.0"
tempfile = "3.2"
test-case = "1.2"
